<?xml version="1.0" encoding="utf-8"?>
<com.llamasoft.envi.ui.components.LockableNestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScroll"
    android:fillViewport="true"
    tools:context=".ui.simulator.SimulatorFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/keyline_2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/originalImage"
                android:visibility="invisible"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ignore"/>
            <ImageView
                android:id="@+id/brushImage"
                android:visibility="invisible"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ignore"/>
            <ImageView
                android:id="@+id/selectedImage"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/crop_image_menu_flip"
                android:contentDescription="@string/ignore"/>
            <RelativeLayout
                android:id="@+id/brush_size_slider_container"
                android:paddingVertical="@dimen/keyline_4"
                android:paddingHorizontal="@dimen/keyline_5"
                android:background="@drawable/sheet_header_black_transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:visibility="gone">
                <TextView
                    android:id="@+id/brush_size_slider_title_text"
                    style="@style/Theme.MyApp.Text.HeadLine6.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brush_slider_title_paint_brush"
                    android:layout_alignParentTop="true"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/brush_size_slider"
                    android:layout_below="@id/brush_size_slider_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_4"
                    android:value="20"
                    android:valueFrom="10"
                    android:valueTo="100"
                    app:labelBehavior="gone"
                    app:thumbRadius="12dp"
                    app:thumbColor="@color/white"
                    app:trackColor="@color/white"
                    app:trackHeight="@dimen/keyline_0" />

                <TextView
                    android:id="@+id/brush_size_slider_min_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_2"
                    android:text="@string/brush_slider_min_value"
                    style="@style/Theme.MyApp.Text.Paragraph2DarkTinyWhite1"
                    android:layout_below="@id/brush_size_slider"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/brush_size_slider_max_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_2"
                    android:text="@string/brush_slider_max_value"
                    style="@style/Theme.MyApp.Text.Paragraph2DarkTinyWhite1"
                    android:layout_below="@id/brush_size_slider"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.OngoingProjectSheet">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/paint_menu_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_option_paint"
                app:spanCount="6"
                tools:itemCount="4"
                android:paddingHorizontal="@dimen/keyline_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/title_text"
                app:layout_constraintTop_toBottomOf="@id/paint_menu_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/keyline_4"
                style="@style/Theme.MyApp.Text.HeadLine6.Dark.Caps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_pallete"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_swatch_saved_color"
                app:spanCount="6"
                tools:itemCount="6"
                android:paddingHorizontal="@dimen/keyline_3"
                android:paddingTop="@dimen/keyline_2"
                android:paddingBottom="@dimen/keyline_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.llamasoft.envi.ui.components.LockableNestedScrollView>