<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sheet_header"
        tools:context=".ui.project.components.ColorExplorerDialog">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/explore_our_colors"
            android:textAlignment="center"
            android:layout_marginVertical="@dimen/keyline_5"
            android:textAppearance="@style/Theme.MyApp.Text.HeadLine5.Dark"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_1"
            app:fabSize="mini"
            app:maxImageSize="38dp"
            android:src="@drawable/ic_close"
            style="@style/Theme.MyApp.Button.IconOnly"
            android:tint="@color/black"
            android:contentDescription="@string/ignore"
            android:layout_marginStart="@dimen/keyline_5"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:id="@+id/view_dotted_one"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="@dimen/keyline_4"
            android:layerType="software"
            android:background="@drawable/background_dotted_horizontal_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <com.llamasoft.envi.ui.components.PickerH
            android:id="@+id/pickerH"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/keyline_4"
            android:layout_marginHorizontal="@dimen/keyline_4"
            app:layout_constraintTop_toBottomOf="@+id/view_dotted_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/swatch_color"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/keyline_4"
            android:layout_marginHorizontal="@dimen/keyline_4"
            app:strokeWidth="2dp"
            app:strokeColor="@color/gray_800"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Image.AllCorners2dp"
            app:layout_constraintTop_toBottomOf="@+id/pickerH"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/ignore"/>

        <com.llamasoft.envi.ui.components.PickerSV
            android:id="@+id/pickerSV"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/keyline_4"
            android:layout_marginHorizontal="@dimen/keyline_4"
            app:layout_constraintTop_toBottomOf="@+id/swatch_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_pallete"
            android:layout_marginTop="@dimen/keyline_2"
            style="@style/Theme.MyApp.Button.DottedDark"
            android:layout_height="50dp"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:text="@string/add_to_pallete"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/keyline_4"
            app:layout_constraintTop_toBottomOf="@+id/pickerSV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>