<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".ui.simulator.MenuFragment">
    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_marginBottom="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_menu"
            android:paddingBottom="@dimen/keyline_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_2"
                android:layout_marginHorizontal="@dimen/keyline_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Theme.MyApp.Text.Title.Dark"
                android:text="@string/simulator_title"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_take_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/background_border_black"
                android:paddingVertical="@dimen/keyline_5"
                android:layout_marginTop="@dimen/keyline_5"
                android:layout_marginHorizontal="@dimen/keyline_4"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="@dimen/icon_large"
                    android:layout_height="@dimen/icon_large"
                    android:layout_marginStart="@dimen/keyline_5"
                    android:contentDescription="@string/ignore"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    app:tint="@color/gray_800" />

                <TextView
                    android:id="@+id/text_take_a_picture"
                    style="@style/Theme.MyApp.Text.Body1.Medium.Caps.Dark"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/keyline_4"
                    app:layout_constraintStart_toEndOf="@+id/img_camera"
                    app:layout_constraintEnd_toStartOf="@+id/chevron_picture"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/take_a_picture"
                    />

                <ImageView
                    android:id="@+id/chevron_picture"
                    android:layout_width="@dimen/icon_small"
                    android:layout_height="@dimen/icon_small"
                    android:layout_marginEnd="@dimen/keyline_3"
                    android:contentDescription="@string/ignore"
                    android:src="@drawable/ic_chevron_right_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/gray_800"
                    tools:ignore="ImageContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@+id/btn_take_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/background_border_black"
                android:paddingVertical="@dimen/keyline_5"
                android:layout_margin="@dimen/keyline_4"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_gallery"
                    android:layout_width="@dimen/icon_large"
                    android:layout_height="@dimen/icon_large"
                    android:layout_marginStart="@dimen/keyline_5"
                    android:contentDescription="@string/ignore"
                    android:src="@drawable/ic_photo_gallery"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/gray_800"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/text_gallery"
                    style="@style/Theme.MyApp.Text.Body1.Medium.Caps.Dark"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/keyline_4"
                    app:layout_constraintStart_toEndOf="@+id/img_gallery"
                    app:layout_constraintEnd_toStartOf="@+id/chevron_gallery"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/pick_from_gallery"/>

                <ImageView
                    android:id="@+id/chevron_gallery"
                    android:layout_width="@dimen/icon_small"
                    android:layout_height="@dimen/icon_small"
                    android:layout_marginEnd="@dimen/keyline_3"
                    android:contentDescription="@string/ignore"
                    android:src="@drawable/ic_chevron_right_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/gray_800"
                    tools:ignore="ImageContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
